--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ethers": "^5.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
